Update exception handling